# tag_extraction-poc

./: .gitignore  README.md  pyproject.toml
tag_extraction_ipde/actions_on_cluster/: extraction_key_words.py  graph_similarity.py
tag_extraction_ipde/data/: .gitignore  nouveau_labels_hdbscan_dim50_eps02_mi200_V2.npy
tag_extraction_ipde/dico_num_tag_name_tag/: .gitignore  dico_tag_cluster_hdbscan_dim50_eps02_min200_V2.pkl  load_and_save_dico_tag.py
tag_extraction_ipde/dim_reduction/: .gitignore  dim_reduction.py
tag_extraction_ipde/first_actions/: embeddings.py  import_data.py
tag_extraction_ipde/fit_model/: hdbscan_.py  kmeans.py
tag_extraction_ipde/visualisation/: visu_with_plotly.py
tag_extraction_midwife/action_on_cluster_midwife/: extraction_key_words.py
tag_extraction_midwife/data_midwife/: .gitignore  table_tous_les_labels_sf_hdbscan_dim50_eps0.005_min100.npy
tag_extraction_midwife/dico_num_tag_name_tag/: .gitignore  dico_tag_hdbscan_im50_eps0005_min100_retravaillé_normé_2_fois.pkl
tag_extraction_midwife/first_actions_midwife/: embeddings.py  import_data.py
tag_extraction_midwife/fit_model_midwife/: hdbscan_midwife.py  kmeans_midwife.py
tag_extraction_midwife/keywords_midwife/: dico_label_keyword_sf_bert_kmeans_dim768_eps0.2_min200.pkl  dico_label_keyword_sf_tfidf_bert_kmeans_dim768_eps0.2_min200.pkl  dico_label_keyword_sf_tfidf_kmeans_dim768_eps0.2_min200.pkl
tag_extraction_midwife/reduction_midwife/: .gitignore  reduction.py
tag_extraction_midwife/visualisation/: visu_with_plotly.py
